RESOLVED FIXED106638
AX: Computed hierarchical level is not consistent with aria-level
https://bugs.webkit.org/show_bug.cgi?id=106638
Summary AX: Computed hierarchical level is not consistent with aria-level
Dominic Mazzoni
Reported 2013-01-11 00:48:38 PST
The specs for aria-level say that it's 1-based (http://www.w3.org/TR/wai-aria/states_and_properties#aria-level), but when no aria-level is provided, WebKit computes a 0-based hierarchical level for a tree, so they're inconsistent. Mac uses 0-based levels, so I think the right solution is for WebKit to be 1-based internally (to match the aria-level spec) and the Mac impl should subtract one when returning disclosureLevel.
Attachments
Patch (9.42 KB, patch)
2013-01-11 00:52 PST, Dominic Mazzoni
no flags
Patch (11.90 KB, patch)
2013-01-11 09:23 PST, Dominic Mazzoni
no flags
Patch (11.87 KB, patch)
2013-01-11 09:47 PST, Dominic Mazzoni
no flags
Dominic Mazzoni
Comment 1 2013-01-11 00:52:43 PST
Build Bot
Comment 2 2013-01-11 02:23:06 PST
Comment on attachment 182285 [details] Patch Attachment 182285 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15806304 New failing tests: platform/mac/accessibility/aria-treegrid.html
Dominic Mazzoni
Comment 3 2013-01-11 09:23:24 PST
chris fleizach
Comment 4 2013-01-11 09:42:25 PST
Comment on attachment 182353 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182353&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapper.mm:2484 > + level -= 1; it looks like you're not actually using level
Dominic Mazzoni
Comment 5 2013-01-11 09:46:58 PST
(In reply to comment #4) > (From update of attachment 182353 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=182353&action=review > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapper.mm:2484 > > + level -= 1; > > it looks like you're not actually using level Oops, you're right.
Dominic Mazzoni
Comment 6 2013-01-11 09:47:11 PST
WebKit Review Bot
Comment 7 2013-01-11 10:08:22 PST
Comment on attachment 182356 [details] Patch Clearing flags on attachment: 182356 Committed r139456: <http://trac.webkit.org/changeset/139456>
WebKit Review Bot
Comment 8 2013-01-11 10:08:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.