AX: Computed hierarchical level is not consistent with aria-level https://bugs.webkit.org/show_bug.cgi?id=106638

Reviewed by Chris Fleizach.

Source/WebCore:

Make hierarchicalLevel computation 1-based to match the aria-level spec.

Extends an existing test: platform/mac/accessibility/aria-tree.html.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::hierarchicalLevel):
* accessibility/AccessibilityObject.h:
(AccessibilityObject):
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

Extend aria-tree.html to check the hierarchicalLevel automatically
computed when aria-level is not provided. Make sure they're consistent.
Now, the mac disclosureLevel will be one less than the web aria-level.

* platform/mac/accessibility/aria-tree-expected.txt:
* platform/mac/accessibility/aria-tree.html:
* platform/mac/accessibility/aria-treegrid-expected.txt:
* platform/mac/accessibility/aria-treegrid.html:


Canonical link: https://commits.webkit.org/124877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139456 268f45cc-cd09-0410-ab3c-d52691b4dbfc